--- a/site/synthese.html
+++ b/site/synthese.html
@@ -209,34 +209,201 @@ function normalizeText(text) {
 function generatePDF() {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
+
+  const pageWidth = doc.internal.pageSize.getWidth();
+  const pageHeight = doc.internal.pageSize.getHeight();
+  const margin = 20;
+  const maxWidth = pageWidth - margin * 2;
   let y = 20;
-  const w = doc.internal.pageSize.getWidth() - 40;
 
-  doc.setFont("helvetica","bold");
-  doc.setFontSize(18);
-  doc.text("Master Your Metrics",105,y,{align:"center"});
-  y+=10;
+  const newPageIfNeeded = (h = 10) => {
+    if (y + h > pageHeight - 20) {
+      doc.addPage();
+      y = 20;
+    }
+  };
 
-  doc.setFontSize(12);
-  doc.text(`Score global : ${globalScore}/100`,20,y);
-  y+=10;
+  /* =====================================================
+     PAGE 1 — COUVERTURE / SYNTHÈSE
+  ===================================================== */
 
-  Object.entries(answersByDomain).forEach(([domain,answers])=>{
-    if(!answers.length) return;
-    doc.addPage(); y=20;
-    doc.setFont("helvetica","bold");
-    doc.text(domain,20,y); y+=8;
-    doc.setFont("helvetica","normal");
-    answers.forEach((a,i)=>{
-      const txt = `${i+1}. ${normalizeText(a.question)}\n→ ${normalizeText(a.answer)}`;
-      const h = doc.getTextDimensions(txt,{maxWidth:w}).h;
-      if(y+h>270){doc.addPage();y=20;}
-      doc.text(txt,20,y,{maxWidth:w});
-      y+=h+6;
+  // Bandeau haut
+  doc.setFillColor(0, 58, 112);
+  doc.rect(0, 0, pageWidth, 45, "F");
+
+  doc.setTextColor(255);
+  doc.setFont("helvetica", "bold");
+  doc.setFontSize(22);
+  doc.text("Master Your Metrics", pageWidth / 2, 25, { align: "center" });
+
+  doc.setFontSize(11);
+  doc.setFont("helvetica", "normal");
+  doc.text(
+    "Diagnostic de pilotage — Synthèse décisionnelle",
+    pageWidth / 2,
+    35,
+    { align: "center" }
+  );
+
+  doc.setTextColor(0);
+  y = 60;
+
+  // Carte Score global
+  doc.setFillColor(245, 247, 250);
+  doc.roundedRect(margin, y, maxWidth, 32, 6, 6, "F");
+
+  doc.setFont("helvetica", "bold");
+  doc.setFontSize(14);
+  doc.text("Score global", margin + 10, y + 14);
+
+  doc.setFontSize(22);
+  doc.text(`${globalScore} / 100`, pageWidth - margin - 10, y + 18, {
+    align: "right"
+  });
+
+  y += 45;
+
+  // Lecture stratégique
+  doc.setFontSize(13);
+  doc.setFont("helvetica", "bold");
+  doc.text("Lecture stratégique", margin, y);
+
+  y += 8;
+  doc.setFont("helvetica", "normal");
+  doc.setFontSize(11);
+  doc.text(
+    normalizeText(interpretGlobal(globalScore)),
+    margin,
+    y,
+    { maxWidth }
+  );
+
+  y += 20;
+
+  /* =====================================================
+     SCORES PAR PILIER
+  ===================================================== */
+
+  doc.setFont("helvetica", "bold");
+  doc.setFontSize(13);
+  doc.text("Scores par pilier", margin, y);
+  y += 10;
+
+  const pillars = [
+    ["ESG", scores.ESG],
+    ["AML / KYC", scores.AML],
+    ["Digitalisation", scores.Digital],
+    ["Crédit", scores.Credit],
+    ["Cybersécurité", scores.Cyber]
+  ];
+
+  pillars.forEach(([label, value]) => {
+    newPageIfNeeded(14);
+
+    // fond ligne
+    doc.setFillColor(245, 247, 250);
+    doc.roundedRect(margin, y - 6, maxWidth, 12, 4, 4, "F");
+
+    doc.setFont("helvetica", "normal");
+    doc.setFontSize(11);
+    doc.text(label, margin + 6, y + 2);
+
+    doc.setFont("helvetica", "bold");
+    doc.text(`${value} / 100`, pageWidth - margin - 6, y + 2, {
+      align: "right"
+    });
+
+    y += 16;
+  });
+
+  /* =====================================================
+     QUESTIONNAIRE COMPLET
+  ===================================================== */
+
+  Object.entries(answersByDomain).forEach(([domain, answers]) => {
+    if (!answers || answers.length === 0) return;
+
+    doc.addPage();
+    y = 30;
+
+    doc.setFont("helvetica", "bold");
+    doc.setFontSize(16);
+    doc.text(domain, margin, y);
+
+    y += 10;
+
+    doc.setFont("helvetica", "normal");
+    doc.setFontSize(10);
+
+    answers.forEach((item, i) => {
+      const question = normalizeText(item.question);
+      const answer = normalizeText(item.answer);
+
+      const block = `${i + 1}. ${question}\n→ ${answer}`;
+      const h = doc.getTextDimensions(block, { maxWidth }).h;
+
+      newPageIfNeeded(h + 10);
+
+      doc.setFillColor(250, 250, 250);
+      doc.roundedRect(margin, y - 4, maxWidth, h + 6, 4, 4, "F");
+
+      doc.text(block, margin + 4, y, { maxWidth });
+      y += h + 12;
     });
   });
 
-  doc.save("MasterYourMetrics_Diagnostic_Complet.pdf");
+  /* =====================================================
+     PAGE FINALE — CONTACT
+  ===================================================== */
+
+  doc.addPage();
+  y = 50;
+
+  doc.setFont("helvetica", "bold");
+  doc.setFontSize(16);
+  doc.text("Prochaine étape", margin, y);
+
+  y += 10;
+  doc.setFont("helvetica", "normal");
+  doc.setFontSize(11);
+  doc.text(
+    "Ce diagnostic constitue une base objective de discussion. " +
+    "Un échange structuré permet de transformer ces constats " +
+    "en plan d’actions concret, priorisé et mesurable.",
+    margin,
+    y,
+    { maxWidth }
+  );
+
+  y += 30;
+
+  doc.setFillColor(0, 116, 217);
+  doc.roundedRect(margin, y, maxWidth, 30, 6, 6, "F");
+
+  doc.setTextColor(255);
+  doc.setFont("helvetica", "bold");
+  doc.text("Contact", margin + 10, y + 12);
+
+  doc.setFont("helvetica", "normal");
+  doc.text(
+    "Master Your Metrics\nmasteryourmetrics@gmail.com\nwww.master-metrics.vercel.app",
+    margin + 10,
+    y + 22
+  );
+
+  doc.setTextColor(0);
+
+  /* FOOTER */
+  doc.setFontSize(8);
+  doc.setTextColor(130);
+  doc.text(
+    "Document confidentiel — usage décisionnel",
+    pageWidth / 2,
+    pageHeight - 10,
+    { align: "center" }
+  );
+
+  doc.save("MasterYourMetrics_Diagnostic_Executive.pdf");
 }
 
 /* =========================
