--- a/site/synthese.html
+++ b/site/synthese.html
@@ -202,6 +202,18 @@ function normalizeText(text) {
     .replace(/❌/g,"NON")
     .normalize("NFD").replace(/[\u0300-\u036f]/g,"");
 }
+/* =========================
+   INTERPRÉTATION GLOBALE
+========================= */
+function interpretGlobal(score) {
+  if (score < 30) {
+    return "Fondations a renforcer rapidement. Priorites claires et plan d'action recommande.";
+  }
+  if (score < 70) {
+    return "Niveau intermediaire. Des gains rapides sont possibles sur 30 a 60 jours.";
+  }
+  return "Niveau solide. Optimisation et valorisation aupres des partenaires recommandees.";
+}
 
 /* =========================
    PDF COMPLET
