--- a/site/synthese.html
+++ b/site/synthese.html
@@ -141,6 +141,72 @@ footer {
     📨 Envoyer ma scorecard par email
   </button>
 </div>
+<section class="card" style="border-left:6px solid #28a745;">
+  <h2>📅 Un échange stratégique de 30 minutes</h2>
+
+  <p style="font-size:1.05em; line-height:1.6;">
+    Ce diagnostic met en évidence des priorités claires.
+    <strong>Un échange court permet de les traduire en décisions concrètes</strong>,
+    adaptées à votre réalité économique, réglementaire et opérationnelle.
+  </p>
+
+  <ul style="margin-top:20px; line-height:1.8;">
+    <li>✔️ Lecture experte de vos scores et écarts</li>
+    <li>✔️ Identification des leviers à impact rapide</li>
+    <li>✔️ Orientation claire (quoi faire, quoi éviter)</li>
+  </ul>
+
+  <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
+     target="_blank" rel="noopener"
+     style="
+       display:inline-block;
+       margin-top:25px;
+       padding:16px 32px;
+       background:#28a745;
+       color:white;
+       text-decoration:none;
+       font-weight:bold;
+       border-radius:8px;
+       font-size:1.1em;
+     ">
+    📅 Planifier mon échange stratégique
+  </a>
+
+  <p style="font-size:0.85em; color:#666; margin-top:10px;">
+    Sans engagement • Approche pragmatique • Valeur immédiate
+  </p>
+</section>
+<section class="card" style="border-left:6px solid #0074D9;">
+  <h2>🚀 Du diagnostic à l’action opérationnelle</h2>
+
+  <p style="font-size:1.05em; line-height:1.6;">
+    Le diagnostic est une photographie.
+    <strong>Nos sprints d’accompagnement transforment cette photographie en plan d’action</strong>,
+    priorisé, mesurable et réaliste.
+  </p>
+
+  <ul style="margin-top:20px; line-height:1.8;">
+    <li>✔️ Sprints ESG, AML/KYC, Digitalisation, Crédit, Cybersécurité</li>
+    <li>✔️ Actions concrètes sur 30 à 90 jours</li>
+    <li>✔️ Livrables exploitables (policies, roadmap, preuves)</li>
+    <li>✔️ Valorisation auprès banques, clients et partenaires</li>
+  </ul>
+
+  <a href="services.html"
+     style="
+       display:inline-block;
+       margin-top:25px;
+       padding:14px 28px;
+       background:#0074D9;
+       color:white;
+       text-decoration:none;
+       font-weight:bold;
+       border-radius:8px;
+       font-size:1.05em;
+     ">
+    🔍 Découvrir nos services & sprints
+  </a>
+</section>
 
 </main>
 
