--- a/site/synthese.html
+++ b/site/synthese.html
@@ -207,6 +207,34 @@ footer {
     🔍 Découvrir nos services & sprints
   </a>
 </section>
+<section class="card" style="text-align:center; background:#f9fafb;">
+  <h2>📬 Une question ou un besoin spécifique ?</h2>
+
+  <p style="font-size:1.05em; line-height:1.6;">
+    Chaque situation est différente.
+    Si vous souhaitez poser une question, partager un contexte particulier
+    ou vérifier la pertinence d’un accompagnement,
+    <strong>écrivez-nous directement</strong>.
+  </p>
+
+  <a href="mailto:masteryourmetrics@gmail.com"
+     style="
+       display:inline-block;
+       margin-top:20px;
+       padding:14px 30px;
+       background:#333;
+       color:white;
+       text-decoration:none;
+       font-weight:bold;
+       border-radius:8px;
+     ">
+    ✉️ Contacter Master Your Metrics
+  </a>
+
+  <p style="font-size:0.85em; color:#666; margin-top:12px;">
+    Réponse humaine • Approche confidentielle • Orientation claire
+  </p>
+</section>
 
 </main>
 
