--- a/site/index.html
+++ b/site/index.html
@@ -231,6 +231,86 @@
   </p>
   <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
 </header>
+<!-- =========================
+     EXPERTISE & CRÉDIBILITÉ
+========================= -->
+<section id="expertise" style="padding:70px 20px;background:#f6f8fb;">
+  <h2 style="text-align:center;margin-bottom:20px;">
+    Une expertise reconnue, orientée décision
+  </h2>
+
+  <p style="max-width:850px;margin:0 auto 50px;text-align:center;font-size:1.05em;">
+    Master Your Metrics s’appuie sur une expertise solide en
+    <strong>finance, conformité réglementaire et pilotage des risques</strong>,
+    au service des indépendants, PME et professionnels du chiffre.
+  </p>
+
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px;max-width:1100px;margin:auto;">
+    <div style="background:white;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+      <h3>🎓 Certifications internationales</h3>
+      <p>
+        Expertise inspirée des standards <strong>CESGA (ESG & finance durable)</strong>
+        et <strong>ACAMS (AML / KYC)</strong>.
+      </p>
+    </div>
+
+    <div style="background:white;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+      <h3>🏦 Expérience bancaire & réglementaire</h3>
+      <p>
+        Compréhension concrète des attentes des banques,
+        partenaires financiers et autorités.
+      </p>
+    </div>
+
+    <div style="background:white;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+      <h3>📊 Approche orientée pilotage</h3>
+      <p>
+        Pas de jargon inutile : des diagnostics conçus pour
+        <strong>décider, prioriser et agir</strong>.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- =========================
+     CE QUE NOUS FAISONS
+========================= -->
+<section id="what-we-do" style="padding:70px 20px;">
+  <h2 style="text-align:center;margin-bottom:20px;">
+    Ce que nous faisons concrètement
+  </h2>
+
+  <p style="max-width:850px;margin:0 auto 50px;text-align:center;font-size:1.05em;">
+    Nous transformons des contraintes réglementaires et opérationnelles
+    en <strong>leviers de pilotage économique</strong>.
+  </p>
+
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;max-width:1100px;margin:auto;">
+    <div style="background:#ffffff;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+      <h3>1️⃣ Diagnostic structuré</h3>
+      <p>
+        Évaluation claire de votre situation ESG, AML/KYC,
+        digitalisation, crédit et cybersécurité.
+      </p>
+    </div>
+
+    <div style="background:#ffffff;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+      <h3>2️⃣ Lecture décisionnelle</h3>
+      <p>
+        Identification de vos priorités réelles,
+        sans surcouche réglementaire inutile.
+      </p>
+    </div>
+
+    <div style="background:#ffffff;padding:30px;border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+      <h3>3️⃣ Plan d’actions pragmatique</h3>
+      <p>
+        Actions concrètes, priorisées,
+        alignées avec vos enjeux business et partenaires.
+      </p>
+    </div>
+  </div>
+</section>
 
 <section id="about">
   <h2>Qui sommes-nous ?</h2>
