--- a/site/synthese.html
+++ b/site/synthese.html
@@ -516,7 +516,7 @@ doc.setFontSize(11);
 doc.text(
   "Master Your Metrics\n" +
   "masteryourmetrics@gmail.com\n" +
-  "www.master-metrics.vercel.app",
+  "www.masteryourmetrics.be",
   margin + 10,
   y + 26
 );
