--- a/site/index.html
+++ b/site/index.html
@@ -255,13 +255,13 @@ header .cta-button {
   <script defer src="/_vercel/insights/script.js"></script>
   <script defer src="https://vercel.com/insights/script.js"></script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-REMM660H7R"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-REMM660H7R');
+  gtag('config', 'G-NVCZ7J5SD3');
 </script>
 </head>
 
