--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NVCZ7J5SD3');
+</script>
 <meta charset="UTF-8">
 <title>Diagnostic Cybersécurité – Master Your Metrics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -250,4 +259,5 @@ loadQuestion();
 
 </body>
 </html>
+
 
