--- a/site/contact.html
+++ b/site/contact.html
@@ -195,7 +195,7 @@ form button:hover {
     avec une orientation claire et pragmatique.
   </p>
 
-  <form action="mailto:masteryourmetrics@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:contact@masteryourmetrics.be" method="post" enctype="text/plain">
     <input type="text" name="Société" placeholder="Nom de la société" required>
     <input type="email" name="Email" placeholder="Votre e-mail professionnel" required>
 
