--- a/site/synthese.html
+++ b/site/synthese.html
@@ -235,7 +235,7 @@ footer {
     <strong>écrivez-nous directement</strong>.
   </p>
 
-  <a href="mailto:masteryourmetrics@gmail.com"
+  <a href="mailto:contact@masteryourmetrics.be"
      style="
        display:inline-block;
        margin-top:20px;
