--- a/site/index.html
+++ b/site/index.html
@@ -530,7 +530,7 @@ style="
       💬 Contact & FAQ
     </a>
 
-    <a href="mailto:masteryourmetrics@gmail.com"
+    <a href="mailto:contact@masteryourmetrics.be"
        class="cta-button"
        style="background:linear-gradient(135deg,#28a745,#1e7e34);">
       📩 Contact direct
