--- a/site/synthese.html
+++ b/site/synthese.html
@@ -174,7 +174,7 @@ footer {
     <li>✔️ Orientation claire (quoi faire, quoi éviter)</li>
   </ul>
 
-  <a href="https://calendar.app.google/TWzExGsSew5rCkN77"
+  <a href="https://calendar.app.google/4E79ZUbDgHx2AMGe6"
      target="_blank" rel="noopener"
      style="
        display:inline-block;
@@ -533,7 +533,7 @@ doc.setFont("helvetica", "normal");
 doc.setFontSize(11);
 doc.text(
   "Master Your Metrics\n" +
-  "masteryourmetrics@gmail.com\n" +
+  "contact@masteryourmetrics.be\n" +
   "www.masteryourmetrics.be",
   margin + 10,
   y + 26
@@ -559,7 +559,7 @@ doc.setTextColor(0);
    EMAIL – VERSION CTA CLIENT
 ========================= */
 function sendReport() {
-  const recipient = "masteryourmetrics@gmail.com";
+  const recipient = "contact@masteryourmetrics.be";
   const subject = "Votre scorecard – Prochaines étapes possibles";
 
   const body = `
@@ -601,8 +601,8 @@ https://master-metrics.vercel.app/services.html
 Bien cordialement,
 
 Master Your Metrics
-masteryourmetrics@gmail.com
-https://master-metrics.vercel.app
+contact@masteryourmetrics.be
+https://masteryourmetrics.be
 `.trim();
 
   const url =
