--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -1,185 +1,178 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <meta charset="UTF-8">
+  <title>Diagnostic Cybersécurité – Master Your Metrics</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  gtag('config', 'G-NVCZ7J5SD3');
-</script>
-<meta charset="UTF-8">
-<title>Diagnostic Cybersécurité – Master Your Metrics</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NVCZ7J5SD3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NVCZ7J5SD3');
+  </script>
 
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #f4f6f8, #eef2f6);
-  margin: 0;
-}
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #f4f6f8, #eef2f6);
+      margin: 0;
+    }
 
-header {
-  background-color: #0b1c2d;
-  color: white;
-  padding: 40px 20px;
-  text-align: center;
-}
+    header {
+      background-color: #0b1c2d;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
 
-main {
-  max-width: 700px;
-  margin: 40px auto;
-  padding: 20px;
-}
+    main {
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 20px;
+    }
 
-.card {
-  background: white;
-  border-radius: 18px;
-  padding: 30px;
-  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
-  text-align: center;
-}
+    .card {
+      background: white;
+      border-radius: 18px;
+      padding: 30px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+      text-align: center;
+    }
 
-.progress {
-  height: 10px;
-  background: #e0e0e0;
-  border-radius: 20px;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
+    .progress {
+      height: 10px;
+      background: #e0e0e0;
+      border-radius: 20px;
+      overflow: hidden;
+      margin-bottom: 20px;
+    }
 
-.progress-bar {
-  height: 100%;
-  width: 0%;
-  background: linear-gradient(90deg, #6c5ce7, #00cec9);
-  transition: width 0.4s ease;
-}
+    .progress-bar {
+      height: 100%;
+      width: 0%;
+      background: linear-gradient(90deg, #6c5ce7, #00cec9);
+      transition: width 0.4s ease;
+    }
 
-.counter {
-  font-size: 0.9em;
-  color: #666;
-  margin-bottom: 20px;
-}
+    .counter {
+      font-size: 0.9em;
+      color: #666;
+      margin-bottom: 20px;
+    }
 
-.question {
-  font-size: 1.3em;
-  font-weight: bold;
-  margin-bottom: 25px;
-}
+    .question {
+      font-size: 1.3em;
+      font-weight: bold;
+      margin-bottom: 25px;
+    }
 
-.choice {
-  display: block;
-  width: 100%;
-  padding: 16px;
-  margin: 12px 0;
-  border-radius: 14px;
-  border: 2px solid #eee;
-  background: #f9f9f9;
-  font-size: 1.05em;
-  cursor: pointer;
-  transition: all 0.2s ease;
-}
+    .choice {
+      display: block;
+      width: 100%;
+      padding: 16px;
+      margin: 12px 0;
+      border-radius: 14px;
+      border: 2px solid #eee;
+      background: #f9f9f9;
+      font-size: 1.05em;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
 
-.choice:hover {
-  background: #f0efff;
-  border-color: #6c5ce7;
-}
+    .choice:hover {
+      background: #f0efff;
+      border-color: #6c5ce7;
+    }
 
-.temoignage {
-  background: #fff;
-  padding: 20px;
-  border-left: 4px solid #6c5ce7;
-  margin-top: 25px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  font-style: italic;
-}
+    .temoignage {
+      background: #fff;
+      padding: 20px;
+      border-left: 4px solid #6c5ce7;
+      margin-top: 25px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      font-style: italic;
+    }
 
-footer {
-  text-align: center;
-  margin-top: 30px;
-}
-</style>
-
-<script defer src="/_vercel/insights/script.js"></script>
-<script defer src="https://vercel.com/insights/script.js"></script>
+    footer {
+      text-align: center;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
-<h1>Diagnostic Cybersécurité</h1>
-<p>Évaluez la protection réelle de vos systèmes et de vos données</p>
+  <h1>Diagnostic Cybersécurité</h1>
+  <p>Évaluez la protection réelle de vos systèmes et de vos données</p>
 </header>
 
 <main>
 
-<div class="card">
+  <div class="card">
 
-  <div class="progress">
-    <div class="progress-bar" id="progressBar"></div>
+    <div class="progress">
+      <div class="progress-bar" id="progressBar"></div>
+    </div>
+
+    <div class="counter" id="counter"></div>
+
+    <div class="question" id="question"></div>
+    <div id="choices"></div>
+
+    <div id="result"></div>
+
   </div>
 
-  <div class="counter" id="counter"></div>
+  <div id="nextStepTimer"
+       style="display:none;margin-top:20px;font-size:0.95em;color:#555;text-align:center;">
+    Passage à la <strong>synthèse finale</strong> dans
+    <strong><span id="countdown">4</span>s</strong>…
+  </div>
 
-  <div class="question" id="question"></div>
-  <div id="choices"></div>
-
-  <div id="result"></div>
-
-</div>
-
-<div id="nextStepTimer" style="display:none; margin-top:20px; font-size:0.95em; color:#555;">
-  Passage à la <strong>synthèse finale</strong> dans
-  <strong><span id="countdown">4</span>s</strong>…
-</div>
-
-<footer>
-<a href="../index.html"
-   style="display:inline-block;margin-top:20px;padding:12px 24px;background:#6c5ce7;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">
-← Retour à l'accueil
-</a>
-</footer>
+  <footer>
+    <a href="../index.html"
+       style="display:inline-block;margin-top:20px;padding:12px 24px;background:#6c5ce7;color:white;text-decoration:none;border-radius:10px;font-weight:bold;">
+      ← Retour à l'accueil
+    </a>
+  </footer>
 
 </main>
 
 <script>
+/* =========================
+   QUESTIONS
+========================= */
 const questions = [
-  {
-    text: "Vos collaborateurs sont-ils formés et sensibilisés aux risques cyber (phishing, mots de passe, e-mails) ?",
-    weight: 30
-  },
-  {
-    text: "Utilisez-vous des mots de passe robustes et une authentification à deux facteurs pour les accès sensibles ?",
-    weight: 20
-  },
-  {
-    text: "Vos systèmes sont-ils protégés par des antivirus, pare-feu et mises à jour régulières ?",
-    weight: 20
-  },
-  {
-    text: "Effectuez-vous des sauvegardes automatiques, sécurisées et testées de vos données ?",
-    weight: 15
-  },
-  {
-    text: "Disposez-vous d’un plan de réponse aux incidents cyber avec des responsabilités clairement définies ?",
-    weight: 15
-  }
+  { text: "Vos collaborateurs sont-ils formés aux risques cyber (phishing, mots de passe, e-mails) ?", weight: 30 },
+  { text: "Utilisez-vous des mots de passe robustes et une authentification à deux facteurs ?", weight: 20 },
+  { text: "Vos systèmes sont-ils protégés (antivirus, pare-feu, mises à jour régulières) ?", weight: 20 },
+  { text: "Effectuez-vous des sauvegardes automatiques et testées ?", weight: 15 },
+  { text: "Disposez-vous d’un plan de réponse aux incidents cyber ?", weight: 15 }
 ];
 
 let index = 0;
 let totalScore = 0;
 let answers = [];
 
+/* =========================
+   ELEMENTS DOM
+========================= */
 const questionEl = document.getElementById("question");
 const choicesEl = document.getElementById("choices");
 const progressBar = document.getElementById("progressBar");
 const counter = document.getElementById("counter");
 const resultEl = document.getElementById("result");
 
+/* =========================
+   AFFICHAGE QUESTION
+========================= */
 function loadQuestion() {
   const q = questions[index];
+
   questionEl.textContent = q.text;
   counter.textContent = `Question ${index + 1} / ${questions.length}`;
   progressBar.style.width = `${(index / questions.length) * 100}%`;
@@ -193,6 +186,7 @@ function loadQuestion() {
     const btn = document.createElement("button");
     btn.className = "choice";
     btn.textContent = opt.label;
+
     btn.onclick = () => {
       const weighted = opt.value * q.weight;
       totalScore += weighted;
@@ -206,23 +200,28 @@ function loadQuestion() {
       index++;
       index < questions.length ? loadQuestion() : showResult();
     };
+
     choicesEl.appendChild(btn);
   });
 }
 
+/* =========================
+   RÉSULTAT FINAL
+========================= */
 function showResult() {
   progressBar.style.width = "100%";
 
   const finalScore = Math.round(totalScore);
+
   localStorage.setItem("scoreCyber", finalScore);
   localStorage.setItem("answersCyber", JSON.stringify(answers));
 
   let message =
     finalScore < 30
-      ? "🟥 Cybersécurité faible – exposition élevée au risque de piratage."
+      ? "🟥 Cybersécurité faible – exposition élevée au risque."
       : finalScore < 70
       ? "🟧 Cybersécurité intermédiaire – vulnérabilités à corriger."
-      : "🟩 Cybersécurité solide – vigilance et amélioration continue.";
+      : "🟩 Cybersécurité solide – vigilance continue.";
 
   questionEl.style.display = "none";
   choicesEl.style.display = "none";
@@ -237,6 +236,13 @@ function showResult() {
     </div>
   `;
 
+  startCountdown();
+}
+
+/* =========================
+   REDIRECTION
+========================= */
+function startCountdown() {
   const timerEl = document.getElementById("nextStepTimer");
   const countdownEl = document.getElementById("countdown");
 
@@ -247,6 +253,7 @@ function showResult() {
   const interval = setInterval(() => {
     timeLeft--;
     countdownEl.textContent = timeLeft;
+
     if (timeLeft <= 0) {
       clearInterval(interval);
       window.location.href = "https://master-metrics.vercel.app/synthese.html";
@@ -254,10 +261,11 @@ function showResult() {
   }, 1000);
 }
 
+/* =========================
+   INIT
+========================= */
 loadQuestion();
 </script>
 
 </body>
 </html>
-
-
