--- a/site/diagnostics/cybersecurite.html
+++ b/site/diagnostics/cybersecurite.html
@@ -256,7 +256,7 @@ function startCountdown() {
 
     if (timeLeft <= 0) {
       clearInterval(interval);
-      window.location.href = "https://master-metrics.vercel.app/synthese.html";
+      window.location.href = "https://masteryourmetrics.be/synthese.html";
     }
   }, 1000);
 }
