--- a/site/index.html
+++ b/site/index.html
@@ -69,10 +69,10 @@
     }
 
     .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* 5 modules sur une ligne */
+  gap: 1.5rem;
+}
 
     .feature {
       background: white;
@@ -120,7 +120,17 @@
     text-align: center;
   }
 }
+@media (max-width: 1100px) {
+  .features {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
+@media (max-width: 600px) {
+  .features {
+    grid-template-columns: 1fr;
+  }
+}
     #scrollCTA {
       position: fixed;
       bottom: 28px;
