--- a/site/index.html
+++ b/site/index.html
@@ -368,7 +368,88 @@ header .cta-button {
   </div>
 </section>
 
+<section id="services-access" style="padding:80px 20px;background:#f6f8fb;">
+  <div style="max-width:1200px;margin:0 auto;display:grid;grid-template-columns:1.2fr 1fr;gap:60px;align-items:center;">
 
+    <!-- TEXTE -->
+    <div>
+      <h2 style="font-size:2.4em;margin-bottom:20px;color:#0b1c2d;">
+        Du diagnostic à l’action opérationnelle
+      </h2>
+
+      <p style="font-size:1.1em;line-height:1.7;margin-bottom:20px;">
+        Un diagnostic seul ne crée pas de valeur.
+        <strong>La valeur naît lorsque les constats sont traduits en décisions,
+        puis en actions mesurables.</strong>
+      </p>
+
+      <p style="font-size:1.05em;line-height:1.7;margin-bottom:25px;">
+        Nos services sont structurés autour de <strong>sprints d’accompagnement</strong>
+        (ESG, AML/KYC, Digitalisation, Crédit, Cybersécurité) conçus pour :
+      </p>
+
+      <ul style="line-height:1.9;margin-bottom:30px;">
+        <li>✔️ Corriger rapidement les écarts critiques identifiés</li>
+        <li>✔️ Mettre en place des éléments concrets et documentés</li>
+        <li>✔️ Produire des livrables exploitables (policies, plans, preuves)</li>
+        <li>✔️ Renforcer la crédibilité auprès des banques et partenaires</li>
+      </ul>
+
+      <a href="services.html"
+         style="
+           display:inline-block;
+           padding:18px 42px;
+           background:linear-gradient(135deg,#6c5ce7,#00cec9);
+           color:white;
+           text-decoration:none;
+           font-size:1.2em;
+           font-weight:bold;
+           border-radius:50px;
+           box-shadow:0 10px 26px rgba(108,92,231,0.35);
+           transition:all 0.25s ease;
+         "
+         onmouseover="this.style.transform='translateY(-2px)';this.style.boxShadow='0 14px 36px rgba(108,92,231,0.45)'"
+         onmouseout="this.style.transform='none';this.style.boxShadow='0 10px 26px rgba(108,92,231,0.35)'"
+      >
+        🚀 Découvrir nos services & sprints
+      </a>
+    </div>
+
+    <!-- VISUEL / STRUCTURE -->
+    <div style="
+      background:white;
+      padding:40px;
+      border-radius:18px;
+      box-shadow:0 12px 30px rgba(0,0,0,0.08);
+    ">
+      <h3 style="margin-bottom:20px;color:#0b1c2d;">
+        Notre méthode en 3 temps
+      </h3>
+
+      <div style="margin-bottom:18px;">
+        <strong>1️⃣ Diagnostic structuré</strong>
+        <p style="margin:6px 0 0 0;font-size:0.95em;color:#555;">
+          Évaluation objective de votre situation réelle.
+        </p>
+      </div>
+
+      <div style="margin-bottom:18px;">
+        <strong>2️⃣ Lecture stratégique</strong>
+        <p style="margin:6px 0 0 0;font-size:0.95em;color:#555;">
+          Identification des priorités et des leviers à impact rapide.
+        </p>
+      </div>
+
+      <div>
+        <strong>3️⃣ Sprint d’actions</strong>
+        <p style="margin:6px 0 0 0;font-size:0.95em;color:#555;">
+          Mise en œuvre concrète, mesurable et documentée.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
 
 <section id="modules">
   <h2>Nos 5 Modules Clés</h2>
